# revvision

Hackathon2026_repo/: run_local.ps1  sfdx-project.json
Hackathon2026_repo/.allai/: workspace.db
Hackathon2026_repo/Hackathon_v2/: README.md  expose_url.ps1  pyproject.toml  requirements.txt
Hackathon2026_repo/Hackathon_v2/.allai/: workspace.db
Hackathon2026_repo/Hackathon_v2/salesforce/force-app/main/default/classes/: RevVisionAssessmentController.cls  RevVisionAssessmentControllerTest.cls  RevVisionOpenAiService.cls
Hackathon2026_repo/Hackathon_v2/salesforce/force-app/main/default/lwc/revvisionWorkbench/: revvisionWorkbench.js  revvisionWorkbench.js-meta.xml
Hackathon2026_repo/Hackathon_v2/sample_uploads/01_basic_low_risk/: BasicPricingService.cls  SimplePriceRule.xml
Hackathon2026_repo/Hackathon_v2/sample_uploads/02_balanced_migration_mix/: PricingExtension.object-meta.xml  QuoteMigrationHelper.cls  RegionalPricing.flow  TierLookupTable.xml
Hackathon2026_repo/Hackathon_v2/sample_uploads/03_complex_high_risk/: AverageDealSummaryVariable.xml  EnterpriseComplexPriceRule.xml  LegacyCpxExtension.object-meta.xml  LegacyGlobalQCP.js  RegionMatrixLookupTable.xml
Hackathon2026_repo/Hackathon_v2/src/revvision/: detection.py
Hackathon2026_repo/Hackathon_v2/src/revvision/services/: ai_client.py  blueprints.py
Hackathon2026_repo/Hackathon_v2/src/revvision/ui/: render.py  styles.py
Hackathon2026_repo/Hackathon_v2/tests/: test_blueprints.py  test_testing.py
Hackathon2026_repo/src/: app.py
Hackathon2026_repo/tests/: test_analyzer.py  test_detection.py  (+1 more)
(+24 files in other folders)
